--- a/04_ekottarika/index.html
+++ b/04_ekottarika/index.html
@@ -86,7 +86,12 @@ base: ../
       <li>Chapter 47: Good and Bad</li>
       <li>Chapter 48: Ten Unskillful Deeds</li>
       <li>Chapter 49: Releasing Cattle</li>
-      <li>Chapter 50: Bowing to the Three Treasures</li>
+      -->
+      <li>Chapter 50: Venerating the Three Treasures</li>
+      <ul class="toc">
+        <li>8. <a href="EA_50_8.html">The Snake Parable</a></li>
+      </ul>
+      <!--
       <li>Chapter 51: Not Permanent</li>
       <li>Chapter 52: Great and Kind Path to Parinirvāṇa</li>
       -->
