--- a/03_samyukta/SA_35/index.html
+++ b/03_samyukta/SA_35/index.html
@@ -15,7 +15,7 @@ next: SA35_7.html
 <div class="samNdx">
     <hr/>
   <ul class="samyukta">
-    <li>1. <a href="https://suttacentral.net/sa133/en/analayo" target="_blank">Discourse on What is the Cause</a> <span class="links">(Anālayo) [T 99.133]</span></li>
+    <li>1. Six Abodes of Views <span class="links">(<a href="../../01_agama/samyukta/35/SA35_1.html">Patton</a> | <a href="https://suttacentral.net/sa133/en/analayo" target="_blank">Anālayo</a>) [T 99.133]</span></li>
     <li>2. <a href="https://suttacentral.net/sa134/en/analayo" target="_blank">First Discourse on Abandoning Doubt</a> <span class="links">(Anālayo) [T 99.134]</span></li>
     <li>3. <a href="https://suttacentral.net/sa135/en/analayo" target="_blank">Second Discourse on Abandoning Doubt</a> <span class="links">(Anālayo) [T 99.135]</span></li>
     <li>4. <a href="https://suttacentral.net/sa136/en/analayo" target="_blank">Discourse on What Matter is the Cause</a> <span class="links">(Anālayo) [T 99.136]</span></li>
