--- a/03_samyukta/SA_01/index.html
+++ b/03_samyukta/SA_01/index.html
@@ -70,7 +70,7 @@ next: SA1_1.html
         <li>39. <a href="https://suttacentral.net/sa256/en/analayo" target="_blank">First Discourse on Ignorance</a> <span class="links">(Anālayo) [T 99.256]</span></li>
         <li>40. <a href="https://suttacentral.net/sa257/en/analayo" target="_blank">Second Discourse on Ignorance</a> <span class="links">(Anālayo) [T 99.257]</span></li>
         <li>41. <a href="https://suttacentral.net/sa258/en/analayo" target="_blank">Third Discourse on Ignorance</a> <span class="links">(Anālayo) [T 99.258]</span></li>
-        <li>42. <a href="https://suttacentral.net/sa259/en/analayo" target="_blank">Discourse on Comprehension</a> <span class="links">(Anālayo) [T 99.259]</span></li>
+        <li>42. Direct Realization <span class="links">(<a href="../../01_agama/samyukta/01/SA1_42.html">Patton</a> | <a href="https://suttacentral.net/sa259/en/analayo" target="_blank">Anālayo</a>) [T 99.259]</span></li>
         <li>43. <a href="https://suttacentral.net/sa260/en/analayo" target="_blank">Discourse on Cessation</a> <span class="links">(Anālayo) [T 99.260]</span></li>
         <li>44. <a href="https://suttacentral.net/sa261/en/analayo" target="_blank">Discourse on Puṇṇa</a> <span class="links">(Anālayo) [T 99.261]</span></li>
         <li>45. <a href="https://suttacentral.net/sa262/en/analayo" target="_blank">Discourse to Channa</a> <span class="links">(Anālayo) [T 99.262]</span></li>
