--- a/whats-new.html
+++ b/whats-new.html
@@ -6,6 +6,8 @@ title: Dharma Pearls | What’s New
 <article class="home">
 <h1>What’s New</h1>
 <dl class="whats-new">
+  <dt>5-Oct-2020</dt>
+    <dd>Translation of <a href="01_agama/samyukta/01/SA1_42.html">SĀ 1.42 Direct Realization</a> added.</dd>
   <dt>30-Sep-2020</dt>
     <dd>Translations added:</dd>
     <dd><a href="01_agama/madhyama/MA_200.html">MĀ 200 Ariṣṭa</a></dd>
