Added EA 2.1-10, EA 27.6, EA 46.4, and EA 50.6.

--- a/04_ekottarika/index.html
+++ b/04_ekottarika/index.html
@@ -15,9 +15,21 @@ base: ../
   <div class="madNdx">
     <ul class="toc">
       <!--
-      <li>Chapter 1: Introduction</li>
-      <li>Chapter 2: Ten Mindfulnesses</li>
-      <li>Chapter 3: Broad Discourses</li>
+      <li>Chapter 1: Introduction</li>-->
+      <li>Chapter 2: Ten Recollections</li>
+      <ul class="toc">
+        <li>1. <a href="../01_agama/ekottarika/02/EA_02_01.html">The Buddha</a></li>
+        <li>2. <a href="../01_agama/ekottarika/02/EA_02_02.html">The Teaching</a></li>
+        <li>3. <a href="../01_agama/ekottarika/02/EA_02_03.html">The Assembly</a></li>
+        <li>4. <a href="../01_agama/ekottarika/02/EA_02_04.html">The Precepts</a></li>
+        <li>5. <a href="../01_agama/ekottarika/02/EA_02_05.html">Generosity</a></li>
+        <li>6. <a href="../01_agama/ekottarika/02/EA_02_06.html">Gods</a></li>
+        <li>7. <a href="../01_agama/ekottarika/02/EA_02_07.html">Calmness</a></li>
+        <li>8. <a href="../01_agama/ekottarika/02/EA_02_08.html">Breathing</a></li>
+        <li>9. <a href="../01_agama/ekottarika/02/EA_02_09.html">Body</a></li>
+        <li>10. <a href="../01_agama/ekottarika/02/EA_02_10.html">Death</a></li>
+      </ul>
+      <!--<li>Chapter 3: Broad Discourses</li>
       <li>Chapter 4: Disciples</li>
       <li>Chapter 5: Nuns</li>
       <li>Chapter 6: Laymen</li>
@@ -57,8 +69,12 @@ base: ../
       <!--
       <li>Chapter 25: Four Truths</li>
       <li>Chapter 26: Four Mental Abandonments</li>
-      <li>Chapter 27: Common Destination of Four Truths</li>
-      <li>Chapter 28: Voice Hearer</li>
+      -->
+      <li>Chapter 27: The Correct Destination of the Four Truths</li>
+      <ul>
+        <li>6. <a href="../01_agama/ekottarika/27/EA_27_06.html">Four Kinds of Fearlessness</a>
+      </ul>
+      <!--<li>Chapter 28: Voice Hearer</li>
       <li>Chapter 29: Pain and Pleasure</li>
       <li>Chapter 30: [Sudhā]</li>
       <li>Chapter 31: Increase</li>
@@ -81,14 +97,18 @@ base: ../
       </ul>
       <!--
       <li>Chapter 44: Nine Dwellings of Sentient Beings</li>
-      <li>Chapter 45: Horse King</li>
-      <li>Chapter 46: Compiled Rules</li>
-      <li>Chapter 47: Good and Bad</li>
+      <li>Chapter 45: Horse King</li>-->
+      <li>Chapter 46: Binding Rules</li>
+      <ul class="toc">
+        <li>4. <a href="01_agama/ekottarika/46/EA_46_04.html">Ten Powers</a></li>
+      </ul>
+      <!--<li>Chapter 47: Good and Bad</li>
       <li>Chapter 48: Ten Unskillful Deeds</li>
       <li>Chapter 49: Releasing Cattle</li>
       -->
       <li>Chapter 50: Venerating the Three Treasures</li>
       <ul class="toc">
+        <li>6. <a href="../01_agama/ekottarika/50/EA_50_06.html">Knowledge of Rebirth</a></li>
         <li>8. <a href="EA_50_8.html">The Snake Parable</a></li>
       </ul>
       <!--
