--- a/whats-new.html
+++ b/whats-new.html
@@ -6,6 +6,21 @@ title: Dharma Pearls | What’s New
 <article class="home">
 <h1>What’s New</h1>
 <dl class="whats-new">
+  <dt>31-Oct-2020</dt>
+    <dd>Translations added:</dd>
+    <dd><a href="01_agama/ekottarika/02/EA_02_01.html">EĀ 2.1 The Buddha</a></dd>
+    <dd><a href="01_agama/ekottarika/02/EA_02_02.html">EĀ 2.2 The Teaching</a></dd>
+    <dd><a href="01_agama/ekottarika/02/EA_02_03.html">EĀ 2.3 The Assembly</a></dd>
+    <dd><a href="01_agama/ekottarika/02/EA_02_04.html">EĀ 2.4 Precepts</a></dd>
+    <dd><a href="01_agama/ekottarika/02/EA_02_05.html">EĀ 2.5 Generosity</a></dd>
+    <dd><a href="01_agama/ekottarika/02/EA_02_06.html">EĀ 2.6 Gods</a></dd>
+    <dd><a href="01_agama/ekottarika/02/EA_02_07.html">EĀ 2.7 Calmness</a></dd>
+    <dd><a href="01_agama/ekottarika/02/EA_02_08.html">EĀ 2.8 Breathing</a></dd>
+    <dd><a href="01_agama/ekottarika/02/EA_02_09.html">EĀ 2.9 Body</a></dd>
+    <dd><a href="01_agama/ekottarika/02/EA_02_10.html">EĀ 2.10 Death</a></dd>
+    <dd><a href="01_agama/ekottarika/27/EA_27_06.html">EĀ 27.6 Four Kinds of Fearlessness</a></dd>
+    <dd><a href="01_agama/ekottarika/46/EA_46_04.html">EĀ 46.4 Ten Powers</a></dd>
+    <dd><a href="01_agama/ekottarika/50/EA_50_06.html">EĀ 50.6 Knowledge of Rebirth</a></dd>
   <dt>5-Oct-2020</dt>
     <dd>Translation of <a href="01_agama/samyukta/01/SA1_42.html">SĀ 1.42 Direct Realization</a> added.</dd>
   <dt>30-Sep-2020</dt>
