Added or edited SA 1.148-152, SA 7.10, SA 11.41, SA 11.58.

--- a/03_samyukta/SA_07/index.html
+++ b/03_samyukta/SA_07/index.html
@@ -29,9 +29,9 @@ next: ../SA_10/index.html
 
     <li>8. <a href="https://suttacentral.net/sa610/en/pierquet" target="_blank">Correct Mindfulness</a> <span class="links">(Pierquet) [T 99.610]</span></li>
 <!--
-    <li>9. Subsiding <span class="links">[T 99.611]</span></li>
-    <li>10. Planting a Tree <span class="links">[T 99.612]</span></li>
-    <li>11. Planting a Tree <span class="links">[T 99.612]</span></li>
+    <li>9. Subsiding <span class="links">[T 99.611]</span></li>-->
+    <li>10. <a href="../../01_agama/samyukta/07/SA7_10.html">The Archer</a> <span class="links"> (Patton) [T 99.612]</span></li>
+<!--    <li>11. Planting a Tree <span class="links">[T 99.612]</span></li>
     <li>12. Planting a Tree <span class="links">[T 99.613]</span></li>
     <li>13. Planting a Tree <span class="links">[T 99.613]</span></li>
     <li>14. Planting a Tree <span class="links">[T 99.613]</span></li>
