--- a/03_samyukta/SA_11/index.html
+++ b/03_samyukta/SA_11/index.html
@@ -4,7 +4,7 @@ type: default
 title: 'The Related Discourses | 11. Powers | Contents'
 base: ../../
 previous: ../SA_10/index.html
-next: ../SA_12/index.html
+next: ../../01_agama/samyukta/11/SA11_41.html
 ---
 <article class="home">
     <h1><a href="../index.html">The Related Discourses</a></h1>
@@ -54,9 +54,9 @@ next: ../SA_12/index.html
     <h4>37. Planting a Tree <span class="links">[T 99.680]</span></h4>
     <h4>38. Planting a Tree <span class="links">[T 99.681]</span></h4>
     <h4>39. Planting a Tree <span class="links">[T 99.682]</span></h4>
-    <h4>40. Planting a Tree <span class="links">[T 99.683]</span></h4>
-    <h4>41. Planting a Tree <span class="links">[T 99.684]</span></h4>
-    <h4>42. Planting a Tree <span class="links">[T 99.685]</span></h4>
+    <h4>40. Planting a Tree <span class="links">[T 99.683]</span></h4>-->
+    <h4>41. <a href="../../01_agama/samyukta/11/SA11_41.html">The Tathāgata and the Arhat</a> <span class="links">(Patton) [T 99.684]</span></h4>
+    <!--<h4>42. Planting a Tree <span class="links">[T 99.685]</span></h4>
     <h4>43. Planting a Tree <span class="links">[T 99.686]</span></h4>
     <h4>44. Planting a Tree <span class="links">[T 99.687]</span></h4>
     <h4>45. Planting a Tree <span class="links">[T 99.688]</span></h4>
@@ -71,13 +71,13 @@ next: ../SA_12/index.html
     <h4>54. Planting a Tree <span class="links">[T 99.697]</span></h4>
     <h4>55. Planting a Tree <span class="links">[T 99.698]</span></h4>
     <h4>56. Planting a Tree <span class="links">[T 99.699]</span></h4>
-    <h4>57. Planting a Tree <span class="links">[T 99.700]</span></h4>
-    <h4>58. Planting a Tree <span class="links">[T 99.701]</span></h4>
-    <h4>59. Planting a Tree <span class="links">[T 99.702]</span></h4>
+    <h4>57. Planting a Tree <span class="links">[T 99.700]</span></h4>-->
+    <h4>58. <a href="../../01_agama/samyukta/11/SA11_58.html">Ten Powers</a> <span class="links">(Patton) [T 99.701]</span></h4>
+    <!--<h4>59. Planting a Tree <span class="links">[T 99.702]</span></h4>
     <h4>60. Planting a Tree <span class="links">[T 99.703]</span></h4>
 -->
-
 </div>
+<hr/>
 <div class="footer-nav">
   {%- if page.previous -%}<h3 class="previous"><a href="{{ page.previous }}">Previous</a></h3>{%- endif -%}
   {%- if page.next -%}<h3 class="next"><a href="{{ page.next }}">Next</a></h3>{%- endif -%}
