--- a/whats-new.html
+++ b/whats-new.html
@@ -6,6 +6,8 @@ title: Dharma Pearls | What’s New
 <article class="home">
 <h1>What’s New</h1>
 <dl class="whats-new">
+  <dt>11-Nov-2020</dt>
+    <dd>Added translation of <a href="01_agama/other/T757.html">T757 Hair-Raising Joy</a></dd>
   <dt>9-Nov-2020</dt>
     <dd>Added translation of <a href="01_agama/ekottarika/31/EA_31_08.html">EĀ 31.8 The Bodhisattva's Austerities</a></dd>
   <dt>1-Nov-2020</dt>
