Fixed a link in EA index.

--- a/04_ekottarika/index.html
+++ b/04_ekottarika/index.html
@@ -103,7 +103,7 @@ base: ../
       <li>Chapter 45: Horse King</li>-->
       <li>Chapter 46: Binding Rules</li>
       <ul class="toc">
-        <li>4. <a href="01_agama/ekottarika/46/EA_46_04.html">Ten Powers</a></li>
+        <li>4. <a href="../01_agama/ekottarika/46/EA_46_04.html">Ten Powers</a></li>
       </ul>
       <!--<li>Chapter 47: Good and Bad</li>
       <li>Chapter 48: Ten Unskillful Deeds</li>
