Added MA 146, edited MA 16 and 80 to correspond in parallel passages.

--- a/02_madhyama/index.html
+++ b/02_madhyama/index.html
@@ -37,14 +37,14 @@ base: ../
               <li>Intention</li>
               <li><a href="01_First/02_Related_To_Action/MA_016.html">The Kālāmas</a></li>
               <li><a href="01_First/02_Related_To_Action/MA_017.html">Gāminī</a></li>
-              <li>The Lion</li>
+              <!--<li>The Lion</li>
               <li>Nirgrantha</li>
-              <li>[Pāṭali]</li>
+              <li>[Pāṭali]</li>-->
             </ol>
           </li>
           <li>Related to Śāriputra
-            <ol start="21">
-              <li>Equanimity</li>
+            <ol start="31">
+              <!--<li>Equanimity</li>
               <li>Accomplishing the Precepts</li>
               <li>Knowledge</li>
               <li>The Lion’s Roar</li>
@@ -53,7 +53,7 @@ base: ../
               <li>[Dhānañjani]</li>
               <li>Edifying the Ill</li>
               <li>Mahākauṣṭhila</li>
-              <li>Parable of the Elephant’s Footprint</li>
+              <li>Parable of the Elephant’s Footprint</li> -->
               <li><a href="01_First/03_Related_To_Sariputra/MA_031.html">Discernment of the Noble Truths</a></li>
             </ol>
           </li>
@@ -103,17 +103,17 @@ base: ../
         </ol>
         <ol start="9">
           <li>Cause
-            <ol start="97">
-              <li>Larger Causation</li>
+            <ol start="98">
+              <!--<li>Larger Causation</li>-->
               <li><a href="02_Lesser_Lands_and_Cities\09_Cause\MA_098.html">Abodes of Mindfulness</a></li>
-              <li>[Larger] Mass of Suffering</li>
+              <!--<li>[Larger] Mass of Suffering</li>
               <li>[Smaller] Mass of Suffering</li>
               <li>Progressive Mental States</li>
               <li>Thought</li>
               <li>[Smaller] Lion’s Roar</li>
               <li>Udumbara</li>
               <li>Wishing</li>
-              <li>Perception</li>
+              <li>Perception</li>-->
             </ol>
           </li>
         </ol>
@@ -123,11 +123,17 @@ base: ../
     <h3>8. Defilement</h3>
     <h3>9. Causation</h3>
     <h3>10. Forest</h3>
-      <br/>
-    <h2>Mindfulness Recitation</h2>
-    <h3>11. Great</h3>
-    <h3>12. Brahmins</h3>
-      <br/> -->
+      <br/>-->
+    <ul class="list-style-none">
+      <li>III. Mindfulness Recitation</li>
+        <ol start="12">
+      <!--<h3>11. Great</h3>-->
+          <li>Priests</li>
+            <ol start="146">
+              <li><a href="../01_agama/madhyama/MA_146.html">Parable of the Elephant’s Footprint</a></li>
+            </ol>
+        </ol>
+    </ul>
     <ul class="list-style-none">
       <li>IV. Discernment Recitation</li>
       <!--
