--- a/whats-new.html
+++ b/whats-new.html
@@ -6,10 +6,12 @@ title: Dharma Pearls | What’s New
 <article class="home">
 <h1>What’s New</h1>
 <dl class="whats-new">
+  <dt>15-Nov-2020</dt>
+    <dd><a href="01_agama/madhyama/MA_146.html">MĀ 146 Parable of the Elephant’s Footprint</a></dd>
   <dt>11-Nov-2020</dt>
     <dd>Added translation of <a href="01_agama/other/T757.html">T757 Hair-Raising Joy</a></dd>
   <dt>9-Nov-2020</dt>
-    <dd>Added translation of <a href="01_agama/ekottarika/31/EA_31_08.html">EĀ 31.8 The Bodhisattva's Austerities</a></dd>
+    <dd>Added translation of <a href="01_agama/ekottarika/31/EA_31_08.html">EĀ 31.8 The Bodhisattva’s Austerities</a></dd>
   <dt>1-Nov-2020</dt>
     <dd>Translations added:</dd>
     <dd><a href="01_agama/samyukta/01/SA1_150.html">SĀ 1.150 Lowly</a></dd>
