--- a/whats-new.html
+++ b/whats-new.html
@@ -7,7 +7,7 @@ title: Dharma Pearls | What’s New
 <h1>What’s New</h1>
 <dl class="whats-new">
   <dt>15-Nov-2020</dt>
-    <dd><a href="01_agama/madhyama/MA_146.html">MĀ 146 Parable of the Elephant’s Footprint</a></dd>
+    <dd>Added translation of <a href="01_agama/madhyama/MA_146.html">MĀ 146 Parable of the Elephant’s Footprint</a></dd>
   <dt>11-Nov-2020</dt>
     <dd>Added translation of <a href="01_agama/other/T757.html">T757 Hair-Raising Joy</a></dd>
   <dt>9-Nov-2020</dt>
