Added SA 1.18, 1.138, 1.158, and 6.5. Edited SA 1.17.

--- a/03_samyukta/SA_06/index.html
+++ b/03_samyukta/SA_06/index.html
@@ -4,7 +4,7 @@ type: default
 title: 'The Related Discourses | 6. Feeling | Contents'
 base: ../../
 previous: ../SA_05/index.html
-next: ../SA_07/index.html
+next: ../06/SA6_5.html
 ---
 <article class="home">
     <h1><a href="../index.html">The Related Discourses</a></h1>
@@ -19,9 +19,9 @@ next: ../SA_07/index.html
     <li>1. Planting a Tree <span class="links">[T 99.466]</span></li>
     <li>2. Planting a Tree <span class="links">[T 99.467]</span></li>
     <li>3. Planting a Tree <span class="links">[T 99.468]</span></li>
-    <li>4. Planting a Tree <span class="links">[T 99.469]</span></li>
-    <li>5. Planting a Tree <span class="links">[T 99.470]</span></li>
-    <li>6. Planting a Tree <span class="links">[T 99.471]</span></li>
+    <li>4. Planting a Tree <span class="links">[T 99.469]</span></li>-->
+    <li>5. <a href="../../01_agama/06/SA6_5.html">Poison Arrows</a> <span class="links">[T 99.470]</span></li>
+    <!--<li>6. Planting a Tree <span class="links">[T 99.471]</span></li>
     <li>7. Planting a Tree <span class="links">[T 99.472]</span></li>
     <li>8. Planting a Tree <span class="links">[T 99.473]</span></li>
 -->
