Added translations of SA 1.143, SA 1.172, SA 4.55, SA 19.15, T780, and SA2 3.14. Created new folders as needed.

--- a/03_samyukta/SA_05/index.html
+++ b/03_samyukta/SA_05/index.html
@@ -3,7 +3,7 @@ layout: default
 type: default
 title: 'The Related Discourses | 5. Elements | Contents'
 base: ../../
-previous: ../SA_04/SA4_1.html
+previous: ../../01_agama/samyukta/04/SA4_55.html
 next: ../SA_06/index.html
 ---
 <article class="home">
