--- a/03_samyukta/SA_34/index.html
+++ b/03_samyukta/SA_34/index.html
@@ -3,7 +3,7 @@ layout: default
 type: default
 title: 'The Related Discourses | 34. Rādha | Contents'
 base: ../../
-previous: ../SA_14/SA14_17.html
+previous: ../../01_agama/samyukta/19/SA19_15.html
 next: ../SA_35/index.html
 ---
 <article class="home">
