Added translations of T781, T802, and EA 24.6.

--- a/whats-new.html
+++ b/whats-new.html
@@ -6,7 +6,12 @@ title: Dharma Pearls | What’s New
 <article class="home">
 <h1>What’s New</h1>
 <dl class="whats-new">
-  <dt>9-December-2020</dt>
+  <dt>14-Dec-2020</dt>
+    <dd>Translations added:</dd>
+    <dd><a href="01_agama/ekottarika/31/EA_24_6.html">EĀ 24.6 The Bodhisattva’s Austerities</a></dd>
+    <dd><a href="09_other_sutras/T781.html">T781 The Ten Powers</a></dd>
+    <dd><a href="09_other_sutras/T802.html">T802 Confidence in the Knowledge Powers</a></dd>
+  <dt>9-Dec-2020</dt>
     <dd>Translation added:</dd>
     <dd><a href="01_agama/samyukta/01/SA1_143.html">SĀ 1.143 Impermanent</a></dd>
     <dd><a href="01_agama/samyukta/01/SA1_172.html">SĀ 1.172 Yamaka</a></dd>
