--- a/whats-new.html
+++ b/whats-new.html
@@ -6,6 +6,8 @@ title: Dharma Pearls | What’s New
 <article class="home">
 <h1>What’s New</h1>
 <dl class="whats-new">
+  <dt>1-Feb-2021</dt>
+    <dd>Added translation of <a href="01_agama/dirgha/DA_21.html">DĀ 21 Brahmā’s Shaking</a></dd>
   <dt>14-Dec-2020</dt>
     <dd>Translations added:</dd>
     <dd><a href="01_agama/ekottarika/24/EA_24_6.html">EĀ 24.6 The Three Sabbath Days</a></dd>
