--- a/whats-new.html
+++ b/whats-new.html
@@ -6,6 +6,10 @@ title: Dharma Pearls | What’s New
 <article class="home">
 <h1>What’s New</h1>
 <dl class="whats-new">
+  <dt>11-Feb-2021</dt>
+    <dd>Translations added:</dd>
+    <dd><a href="01_agama/samyukta/25/SA25_57.html">SĀ 25.57 Crossing the Flood</a></dd>
+    <dd><a href="01_agama/samyukta2/SA2_180.html">SĀ2 180 Crossing the Flood</a></dd>
   <dt>1-Feb-2021</dt>
     <dd>Added translation of <a href="01_agama/dirgha/DA_21.html">DĀ 21 Brahmā’s Shaking</a></dd>
   <dt>14-Dec-2020</dt>
@@ -19,7 +23,7 @@ title: Dharma Pearls | What’s New
     <dd><a href="01_agama/samyukta/01/SA1_172.html">SĀ 1.172 Yamaka</a></dd>
     <dd><a href="01_agama/samyukta/04/SA4_55.html">SĀ 4.55 A Handful of Leaves</a></dd>
     <dd><a href="01_agama/samyukta/19/SA19_15.html">SĀ 19.15 The Sabbath Days</a></dd>
-    <dd><a href="01_agama/samyukta2/03/SA2_3_14.html">SĀ2 3.14 The Eighth Day</a></dd>
+    <dd><a href="01_agama/samyukta2/SA2_46.html">SĀ2 46 The Eighth Day</a></dd>
     <dd><a href="09_other_sutras/T780.html">T780 The Ten Powers</a></dd>
   <dt>6-December-2020</dt>
     <dd>Translations added:</dd>
