Added DA 11, 12, and 22.

--- a/whats-new.html
+++ b/whats-new.html
@@ -6,6 +6,11 @@ title: Dharma Pearls | What’s New
 <article class="home">
 <h1>What’s New</h1>
 <dl class="whats-new">
+  <dt>28-Feb-2021</dt>
+    <dd>Translation added:</dd>
+    <dd><a href="01_agama/dirgha/DA_11.html">DĀ 11 Increasing One by One</a></dd>
+    <dd><a href="01_agama/dirgha/DA_12.html">DĀ 12 Three Categories</a></dd>
+    <dd><a href="01_agama/dirgha/DA_22.html">DĀ 22 Śroṇatāṇḍya</a></dd>
   <dt>23-Feb-2021</dt>
     <dd>Added translation of <a href="02_avadana/dharmapada/T211/T211c1v3.html">Dvs 1.2 King Prasenajit’s Queen</a></dd>
   <dt>21-Feb-2021</dt>
