Added DA 24, SA 1.19-22.

--- a/whats-new.html
+++ b/whats-new.html
@@ -6,7 +6,14 @@ title: Dharma Pearls | What’s New
 <article class="home">
 <h1>What’s New</h1>
 <dl class="whats-new">
-  <dt>8-Mar-2021<dt>
+  <dt>27-Mar-2021</dt>
+    <dd>Translations added:</dd>
+    <dd><a href="01_agama/dirgha/DA_24.html">DĀ 24 Dhruva</a></dd>
+    <dd><a href="01_agama/samyukta/01/SA1_19.html">SĀ 25.19 Enjoyment</a></dd>
+    <dd><a href="01_agama/samyukta/01/SA1_20.html">SĀ 25.20 Enjoyment (2)</a></dd>
+    <dd><a href="01_agama/samyukta/01/SA1_21.html">SĀ 25.21 Tendencies</a></dd>
+    <dd><a href="01_agama/samyukta/01/SA1_22.html">SĀ 25.22 Proliferation</a></dd>
+  <dt>8-Mar-2021</dt>
     <dd>Translation of <a href="01_agama/madhyama/MA_008.html">MĀ 8 Seven Suns</a> added</dd>
   <dt>28-Feb-2021</dt>
     <dd>Translation added:</dd>
