--- a/whats-new.html
+++ b/whats-new.html
@@ -6,6 +6,8 @@ title: Dharma Pearls | What’s New
 <article class="home">
 <h1>What’s New</h1>
 <dl class="whats-new">
+  <dt>2-Apr-2021</dt>
+    <dd>Added translation of <a href="01_agama/dirgha/DA_4.html">DĀ 4 Janavṛṣabha</a></dd>
   <dt>27-Mar-2021</dt>
     <dd>Translations added:</dd>
     <dd><a href="01_agama/dirgha/DA_24.html">DĀ 24 Dhruva</a></dd>
