--- a/whats-new.html
+++ b/whats-new.html
@@ -6,7 +6,23 @@ title: Dharma Pearls | What’s New
 <article class="home">
 <h1>What’s New</h1>
 <dl class="whats-new">
-  <dt>7-April-2021</dt>
+  <dt>13-Apr-2021</dt>
+    <dd>Translations added:</dd>
+    <dd><a href="01_agama/samyukta/02/SA2_1.html">SĀ 2.1 Impermanent</a></dd>
+    <dd><a href="01_agama/samyukta/02/SA2_2.html">SĀ 2.2 Painful</a></dd>
+    <dd><a href="01_agama/samyukta/02/SA2_3.html">SĀ 2.3 Empty</a></dd>
+    <dd><a href="01_agama/samyukta/02/SA2_4.html">SĀ 2.4 Not Self</a></dd>
+    <dd><a href="01_agama/samyukta/02/SA2_5.html">SĀ 2.5 Correctly Contemplated</a></dd>
+    <dd><a href="01_agama/samyukta/02/SA2_6.html">SĀ 2.6 Not Knowing</a></dd>
+    <dd><a href="01_agama/samyukta/02/SA2_7.html">SĀ 2.7 Not Knowing (2)</a></dd>
+    <dd><a href="01_agama/samyukta/02/SA2_8.html">SĀ 2.8 Not Knowing (3)</a></dd>
+    <dd><a href="01_agama/samyukta/02/SA2_123.html">SĀ 2.123 Samṛddhi</a></dd>
+    <dd><a href="01_agama/samyukta/02/SA2_124.html">SĀ 2.124 Samṛddhi (2)</a></dd>
+    <dd><a href="01_agama/samyukta/02/SA2_125.html">SĀ 2.125 Samṛddhi (3)</a></dd>
+    <dd><a href="01_agama/samyukta/02/SA2_126.html">SĀ 2.126 Samṛddhi (4)</a></dd>
+    <dd><a href="01_agama/samyukta/02/SA2_127.html">SĀ 2.127 Samṛddhi (5)</a></dd>
+    <dd><a href="01_agama/samyukta/02/SA2_128.html">SĀ 2.128 The World</a></dd>
+  <dt>7-Apr-2021</dt>
     <dd>Translations added:</dd>
     <dd><a href="01_agama/samyukta/01/SA1_153.html">SĀ 1.153 Five Turns</a></dd>
     <dd><a href="01_agama/samyukta/01/SA1_159.html">SĀ 1.159 Faithful</a></dd>
