--- a/whats-new.html
+++ b/whats-new.html
@@ -6,6 +6,9 @@ title: Dharma Pearls | What’s New
 <article class="home">
 <h1>What’s New</h1>
 <dl class="whats-new">
+  <dt>29-Apr-2021</dt>
+    <dd>Translations added:</dd>
+    <dd><a href="01_agama/dirgha/DA_8.html">DĀ 8 Sandhāna</a></dd>
   <dt>25-Apr-2021</dt>
     <dd>Translations added:</dd>
     <dd><a href="01_agama/dirgha/DA_13.html">DĀ 13 The Great Method of Conditionality</a></dd>
