--- a/whats-new.html
+++ b/whats-new.html
@@ -6,6 +6,8 @@ title: Dharma Pearls | What’s New
 <article class="home">
 <h1>What’s New</h1>
 <dl class="whats-new">
+  <dt>17-May-2021</dt>
+    <dd>Translation of <a href="01_agama/dirgha/DA_16.html">DĀ 16 Sujata</a> added.</dd>
   <dt>29-Apr-2021</dt>
     <dd>Translations added:</dd>
     <dd><a href="01_agama/dirgha/DA_8.html">DĀ 8 Sandhāna</a></dd>
