Added DA 25 and edited published sutras in SA 35.

--- a/whats-new.html
+++ b/whats-new.html
@@ -6,11 +6,12 @@ title: Dharma Pearls | What’s New
 <article class="home">
 <h1>What’s New</h1>
 <dl class="whats-new">
+  <dt>21-May-2021</dt>
+    <dd>Translation of <a href="01_agama/dirgha/DA_25.html">DĀ 25 The Naked Wanderer</a> added.</dd>
   <dt>17-May-2021</dt>
     <dd>Translation of <a href="01_agama/dirgha/DA_16.html">DĀ 16 Sujata</a> added.</dd>
   <dt>29-Apr-2021</dt>
-    <dd>Translations added:</dd>
-    <dd><a href="01_agama/dirgha/DA_8.html">DĀ 8 Sandhāna</a></dd>
+    <dd>Translations of <a href="01_agama/dirgha/DA_8.html">DĀ 8 Sandhāna</a> added.</dd>
   <dt>25-Apr-2021</dt>
     <dd>Translations added:</dd>
     <dd><a href="01_agama/dirgha/DA_13.html">DĀ 13 The Great Method of Conditionality</a></dd>
