--- a/whats-new.html
+++ b/whats-new.html
@@ -6,6 +6,8 @@ title: Dharma Pearls | What’s New
 <article class="home">
 <h1>What’s New</h1>
 <dl class="whats-new">
+  <dt>28-Jun-2021</dt>
+    <dd>Translation of <a href="01_agama/dirgha/DA_6.html">DĀ 6 The Noble Wheel-Turning King’s Cultivation</a> added</dd>
   <dt>1-Jun-2021</dt>
     <dd>Translation of <a href="01_agama/dirgha/DA_5.html">DĀ 5 Smaller Teaching on Origination</a> added.</dd>
   <dt>21-May-2021</dt>
