--- a/whats-new.html
+++ b/whats-new.html
@@ -6,6 +6,8 @@ title: Dharma Pearls | What’s New
 <article class="home">
 <h1>What’s New</h1>
 <dl class="whats-new">
+  <dt>23-Jul-2021</dt>
+  <dd>Translation of <a href="01_agama/dirgha/DA_18.html">DĀ 18 Personal Gladness</a> added</dd>
   <dt>2-Jul-2021</dt>
     <dd>Translation of <a href="01_agama/dirgha/DA_9.html">DĀ 9 The Gathered Saṅgha</a> added</dd>
   <dt>28-Jun-2021</dt>
