--- a/whats-new.html
+++ b/whats-new.html
@@ -6,8 +6,10 @@ title: Dharma Pearls | What’s New
 <article class="home">
 <h1>What’s New</h1>
 <dl class="whats-new">
+  <dt>9-Aug-2021</dt>
+    <dd>Translation of <a href="01_agama/dirgha/DA_26.html">DĀ 26 Knowledge of the Three Vedas</a></dd>
   <dt>8-Aug-2021</dt>
-  <dd>Translation of <a href="01_agama/dirgha/DA_20.html">DĀ 20 Ambāṣṭha</a> added</dd>
+    <dd>Translation of <a href="01_agama/dirgha/DA_20.html">DĀ 20 Ambāṣṭha</a> added</dd>
   <dt>23-Jul-2021</dt>
   <dd>Translation of <a href="01_agama/dirgha/DA_18.html">DĀ 18 Personal Gladness</a> added</dd>
   <dt>2-Jul-2021</dt>
