--- a/whats-new.html
+++ b/whats-new.html
@@ -6,6 +6,8 @@ title: Dharma Pearls | What’s New
 <article class="home">
 <h1>What’s New</h1>
 <dl class="whats-new">
+  <dt>10-Aug-2021</dt>
+    <dd>Translation of <a href="01_agama/dirgha/DA_28.html">DĀ 28 [Poṭṭhapāda]</a></dd>
   <dt>9-Aug-2021</dt>
     <dd>Translation of <a href="01_agama/dirgha/DA_26.html">DĀ 26 Knowledge of the Three Vedas</a></dd>
   <dt>8-Aug-2021</dt>
