--- a/whats-new.html
+++ b/whats-new.html
@@ -6,26 +6,28 @@ title: Dharma Pearls | What’s New
 <article class="home">
 <h1>What’s New</h1>
 <dl class="whats-new">
+  <dt>14-Aug-2021</dt>
+    <dd>Added <a href="02_avadana/dharmapada/T211/T211c1v4-6.html">Dvs 1.3 Like Cattle Led to Their Slaughter</a></dd>
   <dt>10-Aug-2021</dt>
-    <dd>Translation of <a href="01_agama/dirgha/DA_28.html">DĀ 28 [Poṭṭhapāda]</a></dd>
+    <dd>Added <a href="01_agama/dirgha/DA_28.html">DĀ 28 [Poṭṭhapāda]</a></dd>
   <dt>9-Aug-2021</dt>
-    <dd>Translation of <a href="01_agama/dirgha/DA_26.html">DĀ 26 Knowledge of the Three Vedas</a></dd>
+    <dd>Added <a href="01_agama/dirgha/DA_26.html">DĀ 26 Knowledge of the Three Vedas</a></dd>
   <dt>8-Aug-2021</dt>
-    <dd>Translation of <a href="01_agama/dirgha/DA_20.html">DĀ 20 Ambāṣṭha</a> added</dd>
+    <dd>Added <a href="01_agama/dirgha/DA_20.html">DĀ 20 Ambāṣṭha</a></dd>
   <dt>23-Jul-2021</dt>
-  <dd>Translation of <a href="01_agama/dirgha/DA_18.html">DĀ 18 Personal Gladness</a> added</dd>
+    <dd>Added <a href="01_agama/dirgha/DA_18.html">DĀ 18 Personal Gladness</a></dd>
   <dt>2-Jul-2021</dt>
-    <dd>Translation of <a href="01_agama/dirgha/DA_9.html">DĀ 9 The Gathered Saṅgha</a> added</dd>
+    <dd>Added <a href="01_agama/dirgha/DA_9.html">DĀ 9 The Gathered Saṅgha</a></dd>
   <dt>28-Jun-2021</dt>
-    <dd>Translation of <a href="01_agama/dirgha/DA_6.html">DĀ 6 The Noble Wheel-Turning King’s Cultivation</a> added.</dd>
+    <dd>Added <a href="01_agama/dirgha/DA_6.html">DĀ 6 The Noble Wheel-Turning King’s Cultivation</a></dd>
   <dt>1-Jun-2021</dt>
-    <dd>Translation of <a href="01_agama/dirgha/DA_5.html">DĀ 5 Smaller Teaching on Origination</a> added.</dd>
+    <dd>Added <a href="01_agama/dirgha/DA_5.html">DĀ 5 Smaller Teaching on Origination</a></dd>
   <dt>21-May-2021</dt>
-    <dd>Translation of <a href="01_agama/dirgha/DA_25.html">DĀ 25 The Naked Wanderer</a> added.</dd>
+    <dd>Added <a href="01_agama/dirgha/DA_25.html">DĀ 25 The Naked Wanderer</a></dd>
   <dt>17-May-2021</dt>
-    <dd>Translation of <a href="01_agama/dirgha/DA_16.html">DĀ 16 Sujata</a> added.</dd>
+    <dd>Added <a href="01_agama/dirgha/DA_16.html">DĀ 16 Sujata</a></dd>
   <dt>29-Apr-2021</dt>
-    <dd>Translations of <a href="01_agama/dirgha/DA_8.html">DĀ 8 Sandhāna</a> added.</dd>
+    <dd>Added <a href="01_agama/dirgha/DA_8.html">DĀ 8 Sandhāna</a></dd>
   <dt>25-Apr-2021</dt>
     <dd>Translations added:</dd>
     <dd><a href="01_agama/dirgha/DA_13.html">DĀ 13 The Great Method of Conditionality</a></dd>
@@ -55,7 +57,7 @@ title: Dharma Pearls | What’s New
     <dd><a href="01_agama/samyukta/01/SA1_161.html">SĀ 1.161 Ānanda</a></dd>
     <dd><a href="01_agama/samyukta/01/SA1_163.html">SĀ 1.163 What’s Destroyed</a></dd>
   <dt>2-Apr-2021</dt>
-    <dd>Added translation of <a href="01_agama/dirgha/DA_4.html">DĀ 4 Janavṛṣabha</a></dd>
+    <dd>Added <a href="01_agama/dirgha/DA_4.html">DĀ 4 Janavṛṣabha</a></dd>
   <dt>27-Mar-2021</dt>
     <dd>Translations added:</dd>
     <dd><a href="01_agama/dirgha/DA_24.html">DĀ 24 Dhruva</a></dd>
@@ -64,22 +66,22 @@ title: Dharma Pearls | What’s New
     <dd><a href="01_agama/samyukta/01/SA1_21.html">SĀ 1.21 Tendencies</a></dd>
     <dd><a href="01_agama/samyukta/01/SA1_22.html">SĀ 1.22 Proliferation</a></dd>
   <dt>8-Mar-2021</dt>
-    <dd>Translation of <a href="01_agama/madhyama/MA_008.html">MĀ 8 Seven Suns</a> added</dd>
+    <dd>Added <a href="01_agama/madhyama/MA_008.html">MĀ 8 Seven Suns</a></dd>
   <dt>28-Feb-2021</dt>
     <dd>Translation added:</dd>
     <dd><a href="01_agama/dirgha/DA_11.html">DĀ 11 Increasing One by One</a></dd>
     <dd><a href="01_agama/dirgha/DA_12.html">DĀ 12 Three Categories</a></dd>
     <dd><a href="01_agama/dirgha/DA_22.html">DĀ 22 Śroṇatāṇḍya</a></dd>
   <dt>23-Feb-2021</dt>
-    <dd>Added translation of <a href="02_avadana/dharmapada/T211/T211c1v3.html">Dvs 1.2 King Prasenajit’s Queen</a></dd>
+    <dd>Added <a href="02_avadana/dharmapada/T211/T211c1v3.html">Dvs 1.2 King Prasenajit’s Queen</a></dd>
   <dt>21-Feb-2021</dt>
-    <dd>Added translation of <a href="02_avadana/dharmapada/T211/T211c1v1-2.html">Dvs 1.1 Śakra Attains Stream Entry</a></dd>
+    <dd>Added <a href="02_avadana/dharmapada/T211/T211c1v1-2.html">Dvs 1.1 Śakra Attains Stream Entry</a></dd>
   <dt>11-Feb-2021</dt>
     <dd>Translations added:</dd>
     <dd><a href="01_agama/samyukta/25/SA25_57.html">SĀ 25.57 Crossing the Flood</a></dd>
     <dd><a href="01_agama/samyukta2/SA2_180.html">SĀ2 180 Crossing the Flood</a></dd>
   <dt>1-Feb-2021</dt>
-    <dd>Added translation of <a href="01_agama/dirgha/DA_21.html">DĀ 21 Brahmā’s Shaking</a></dd>
+    <dd>Added <a href="01_agama/dirgha/DA_21.html">DĀ 21 Brahmā’s Shaking</a></dd>
   <dt>14-Dec-2020</dt>
     <dd>Translations added:</dd>
     <dd><a href="01_agama/ekottarika/24/EA_24_6.html">EĀ 24.6 The Three Sabbath Days</a></dd>
@@ -100,11 +102,11 @@ title: Dharma Pearls | What’s New
     <dd><a href="01_agama/samyukta/01/SA1_158.html">SĀ 1.158 Past, Future, and Present Aggregates</a></dd>
     <dd><a href="01_agama/samyukta/06/SA6_5.html">SĀ 6.5 Poison Arrows</a></dd>
   <dt>15-Nov-2020</dt>
-    <dd>Added translation of <a href="01_agama/madhyama/MA_146.html">MĀ 146 Parable of the Elephant’s Footprint</a></dd>
+    <dd>Added <a href="01_agama/madhyama/MA_146.html">MĀ 146 Parable of the Elephant’s Footprint</a></dd>
   <dt>11-Nov-2020</dt>
-    <dd>Added translation of <a href="01_agama/other/T757.html">T757 Hair-Raising Joy</a></dd>
+    <dd>Added <a href="01_agama/other/T757.html">T757 Hair-Raising Joy</a></dd>
   <dt>9-Nov-2020</dt>
-    <dd>Added translation of <a href="01_agama/ekottarika/31/EA_31_08.html">EĀ 31.8 The Bodhisattva’s Austerities</a></dd>
+    <dd>Added <a href="01_agama/ekottarika/31/EA_31_08.html">EĀ 31.8 The Bodhisattva’s Austerities</a></dd>
   <dt>1-Nov-2020</dt>
     <dd>Translations added:</dd>
     <dd><a href="01_agama/samyukta/01/SA1_150.html">SĀ 1.150 Lowly</a></dd>
@@ -129,17 +131,17 @@ title: Dharma Pearls | What’s New
     <dd><a href="01_agama/ekottarika/46/EA_46_04.html">EĀ 46.4 Ten Powers</a></dd>
     <dd><a href="01_agama/ekottarika/50/EA_50_06.html">EĀ 50.6 Knowledge of Rebirth</a></dd>
   <dt>5-Oct-2020</dt>
-    <dd>Translation of <a href="01_agama/samyukta/01/SA1_42.html">SĀ 1.42 Direct Realization</a> added.</dd>
+    <dd>Added <a href="01_agama/samyukta/01/SA1_42.html">SĀ 1.42 Direct Realization</a></dd>
   <dt>30-Sep-2020</dt>
     <dd>Translations added:</dd>
     <dd><a href="01_agama/madhyama/MA_200.html">MĀ 200 Ariṣṭa</a></dd>
     <dd><a href="01_agama/samyukta/35/SA35_1.html">SĀ 35.1 The Six Abodes of Views</a></dd>
   <dt>28-Sep-2020</dt>
-    <dd>Translation of <a href="01_agama/ekottarika/50/EA_50_8.html">EĀ 50.8 The Snake Parable</a> added.</dd>
+    <dd>Added <a href="01_agama/ekottarika/50/EA_50_8.html">EĀ 50.8 The Snake Parable</a></dd>
   <dt>27-Sep-2020</dt>
-  <dd>Translation of <a href="01_agama/ekottarika/43/EA_43_5.html">EĀ 43.5 The Parable of the Raft</a> added.</dd>
+  <dd>Added <a href="01_agama/ekottarika/43/EA_43_5.html">EĀ 43.5 The Parable of the Raft</a></dd>
   <dt>24-Sep-2020</dt>
-  <dd>Translation of <a href="01_agama/ekottarika/24/EA_24_5.html">EĀ 24.5 Miraculous Transformations</a> added.</dd>
+  <dd>Added <a href="01_agama/ekottarika/24/EA_24_5.html">EĀ 24.5 Miraculous Transformations</a></dd>
   <dt>21-Sep-2020</dt>
   <dd>Translations added:</dd>
   <dd><a href="01_agama/samyukta/01/SA1_16.html">SĀ 1.16 Teaching Liberation</a></dd>
@@ -155,7 +157,7 @@ title: Dharma Pearls | What’s New
     <dd><a href="01_agama/samyukta/01/SA1_14.html">SĀ 1.14 Past (4)</a></dd>
     <dd><a href="01_agama/samyukta/01/SA1_15.html">SĀ 1.15 Teaching Disillusionment</a></dd>
   <dt>18-Sep-2020</dt>
-    <dd>Translation of <a href="01_agama/ekottarika/19/EA_19_01.html">EĀ 19.1 Brahmā’s Request</a> added.</dd>
+    <dd>Added <a href="01_agama/ekottarika/19/EA_19_01.html">EĀ 19.1 Brahmā’s Request</a></dd>
   <dt>31-Aug-2020</dt>
     <dd>Translations added:</dd>
     <dd><a href="03_samyukta/alternates/T112.html">T112 The Eightfold Right Path</a></dd>
@@ -172,9 +174,9 @@ title: Dharma Pearls | What’s New
     <dd><a href="01_agama/samyukta/01/SA1_147.html">SĀ 1.147 Three upright Men</a></dd>
     <dd><a href="03_samyukta/alternates/T102.html">T102 The Five Aggregates Are Empty</a></dd>
   <dt>27-Aug-2020</dt>
-    <dd>Translation of <a href="03_samyukta/alternates/T109.html">T109 Turning the Dharma Wheel Sutra</a> added</dd>
+    <dd>Added <a href="03_samyukta/alternates/T109.html">T109 Turning the Dharma Wheel Sutra</a></dd>
   <dt>26-Aug-2020</dt>
-    <dd>Translation of <a href="01_agama/madhyama/MA_204.html">MĀ 204 Raṃbhaka</a> added</dd>
+    <dd>Added <a href="01_agama/madhyama/MA_204.html">MĀ 204 Raṃbhaka</a></dd>
   <dt>5-Aug-2020</dt>
     <dd>Translations added:</dd>
     <dd><a href="01_agama/dirgha/DA_27.html">DĀ 27 The Fruits of the Ascetics</a></dd>
@@ -182,7 +184,7 @@ title: Dharma Pearls | What’s New
     <dd><a href="01_agama/ekottarika/19/EA_19_02.html">EĀ 19.2 Two Things</a></dd>
     <dd><a href="01_agama/ekottarika/43/EA_43_07.html">EĀ 43.7 The Fruits of the Ascetics</a></dd>
   <dt>27-Jul-2020</dt>
-    <dd><a href="01_agama/madhyama/MA_017.html">MĀ 17 Gāminī</a></dd>
+    <dd>Added <a href="01_agama/madhyama/MA_017.html">MĀ 17 Gāminī</a></dd>
   <dt>24-Jul-2020</dt>
     <dd>Translations added:</dd>
     <dd><a href="01_agama/madhyama/MA_011.html">MĀ 11 The Rock Salt Parable</a></dd>
@@ -211,7 +213,7 @@ title: Dharma Pearls | What’s New
     <dd><a href="01_agama/samyukta/35/SA35_64.html">SĀ 35.64 Wrong View Regarding Actions</a></dd>
     <dd><a href="01_agama/samyukta/35/SA35_67.html">SĀ 35.67 Wrong View Regarding Rebirth</a></dd>
   <dt>22-Jul-2020</dt>
-    <dd>Added translation of <a href="01_agama/madhyama/MA_016.html">MĀ 16 The Kālāmas</a></dd>
+    <dd>Added <a href="01_agama/madhyama/MA_016.html">MĀ 16 The Kālāmas</a></dd>
   <dt>30-Jun-2020</dt>
     <dd>Translations added:</dd>
     <dd><a href="01_agama/madhyama/MA_009.html">MĀ 9 Seven Chariots</a></dd>
@@ -219,9 +221,9 @@ title: Dharma Pearls | What’s New
     <dd><a href="01_agama/madhyama/MA_082.html">MĀ 82 Crickets</a></dd>
     <dd><a href="01_agama/madhyama/MA_186.html">MĀ 186 Inquiry</a></dd>
   <dt>31-May-2020</dt>
-    <dd>Translation of <a href="01_agama/madhyama/MA_081.html">MĀ 81 Mindfulness of Body</a> added.</dd>
+    <dd>Added <a href="01_agama/madhyama/MA_081.html">MĀ 81 Mindfulness of Body</a></dd>
   <dt>7-May-2020</dt>
-    <dd>Translation of <a href="01_agama/madhyama/MA_080.html">MĀ 80 The Rough Cloth</a> added.</dd>
+    <dd>Added <a href="01_agama/madhyama/MA_080.html">MĀ 80 The Rough Cloth</a></dd>
   <dt>25-Apr-2020</dt>
     <dd>Translations added:</dd>
     <dd><a href="01_agama/madhyama/MA_042.html">MĀ 42 What Purpose</a></dd>
@@ -235,31 +237,31 @@ title: Dharma Pearls | What’s New
     <dd><a href="01_agama/madhyama/MA_050.html">MĀ 50 Veneration (2)</a></dd>
     <dd><a href="01_agama/madhyama/MA_051.html">MĀ 51 The Origin</a></dd>
   <dt>22-Apr-2020</dt>
-    <dd>Translation of <a href="01_agama/madhyama/MA_079.html">MĀ 79 The Greater Gods</a> added.</dd>
+    <dd>Added <a href="01_agama/madhyama/MA_079.html">MĀ 79 The Greater Gods</a></dd>
   <dt>8-Apr-2020</dt>
-    <dd>Translation of <a href="01_agama/madhyama/MA_078.html">MĀ 78 Brahmā’s Invitation to the Buddha</a> added.</dd>
+    <dd>Added <a href="01_agama/madhyama/MA_078.html">MĀ 78 Brahmā’s Invitation to the Buddha</a></dd>
   <dt>30-Mar-2020</dt>
-    <dd>Translation of <a href="01_agama/madhyama/MA_077.html">MĀ 77 The Three Clansmen of Sāketa</a> added.</dd>
+    <dd>Added <a href="01_agama/madhyama/MA_077.html">MĀ 77 The Three Clansmen of Sāketa</a></dd>
   <dt>7-Mar-2020</dt>
-    <dd>Translation of <a href="01_agama/madhyama/MA_076.html">MĀ 76 [Ugracelā]</a> added.</dd>
+    <dd>Added <a href="01_agama/madhyama/MA_076.html">MĀ 76 [Ugracelā]</a></dd>
   <dt>4-Mar-2020</dt>
-    <dd>Translation of <a href="01_agama/madhyama/MA_075.html">MĀ 75 The Pure Way to the Imperturbable</a> added.</dd>
+    <dd>Added <a href="01_agama/madhyama/MA_075.html">MĀ 75 The Pure Way to the Imperturbable</a></dd>
   <dt>29-Feb-2020</dt>
-    <dd>Translation of <a href="01_agama/madhyama/MA_074.html">MĀ 74 Eight Thoughts</a> added.</dd>
+    <dd>Added <a href="01_agama/madhyama/MA_074.html">MĀ 74 Eight Thoughts</a></dd>
   <dt>24-Feb-2020</dt>
-    <dd>Translation of <a href="01_agama/madhyama/MA_073.html">MĀ 73 The Gods</a> added.</dd>
+    <dd>Added <a href="01_agama/madhyama/MA_073.html">MĀ 73 The Gods</a></dd>
   <dt>19-Feb-2020</dt>
-    <dd>Translation of <a href="01_agama/madhyama/MA_072.html">MĀ 72 The Legend of King Dīrghāyu</a> added.</dd>
+    <dd>Added <a href="01_agama/madhyama/MA_072.html">MĀ 72 The Legend of King Dīrghāyu</a></dd>
   <dt>10-Nov-2019</dt>
-    <dd>Translations of <a href="01_agama/samyukta/13/index.html">SĀ 13.24-30</a> added.</dd>
+    <dd>Added <a href="01_agama/samyukta/13/index.html">SĀ 13.24-30</a></dd>
   <dt>5-Nov-2019</dt>
-    <dd>Translations of <a href="01_agama/samyukta/13/index.html">SĀ 13.15-23</a> added.</dd>
+    <dd>Added <a href="01_agama/samyukta/13/index.html">SĀ 13.15-23</a></dd>
   <dt>1-Nov-2019</dt>
-    <dd>Translations of <a href="01_agama/samyukta/13/index.html">SĀ 13.8-10</a> added.</dd>
+    <dd>Added <a href="01_agama/samyukta/13/index.html">SĀ 13.8-10</a></dd>
   <dt>27-Oct-2019</dt>
-    <dd>Translations of <a href="01_agama/samyukta/01/index.html">SĀ 1.5-10</a> added.</dd>
+    <dd>Added <a href="01_agama/samyukta/01/index.html">SĀ 1.5-10</a></dd>
   <dt>23-Oct-2019</dt>
-    <dd>Translations of <a href="01_agama/samyukta/01/index.html">SĀ 1.1-4</a> added.</dd>
+    <dd>Added <a href="01_agama/samyukta/01/index.html">SĀ 1.1-4</a></dd>
   <dt>22-Oct-2019</dt>
     <dd>Published table of contents for <a class="title" href="01_agama/samyukta/index.html">The Related Discourses</a> based on Yinshun’s reconstructed version. It includes 7 parts and 51 groups of sutras.</dd>
   <dt>14-Oct-2019</dt>
