--- a/translations.html
+++ b/translations.html
@@ -3,7 +3,7 @@ layout: default
 type: home
 title: Dharma Pearls | Translations
 ---
-<article>
+<article class="home">
   <h1>Current Translation Projects</h1>
   <p>The first long-term goal of <em>Dharma Pearls</em> is to produce English translations of the four Chinese Āgama collections and select early Buddhist texts like the Chinese Dharmapāda from the <em>Taisho</em> canon.</p>
   <p>The list of texts currently slated for translation includes:</p>
