Added DA 14 and MA 176.

--- a/whats-new.html
+++ b/whats-new.html
@@ -6,6 +6,10 @@ title: Dharma Pearls | What’s New
 <article class="home">
 <h1>What’s New</h1>
 <dl class="whats-new">
+  <dt>3-Sep-2021</dt>
+    <dd>Added <a href="01_agama/dirgha/DA_14.html">DĀ 14 Questions Asked by Śakra the Lord of Gods</a></dd>
+  <dt>2-Sep-2021</dt>
+    <dd>Added <a href="01_agama/madhyama/MA_176.html">MĀ 176 Dhyāna Practitioners</a></dd>
   <dt>1-Sep-2021</dt>
     <dd>Translations added:</dd>
     <dd><a href="01_agama/dirgha/DA_3.html">DĀ 3 Govinda</a></dd>
